--- a/package.json
+++ b/package.json
@@ -10,19 +10,28 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@mantine/core": "^8.3.12",
+    "@mantine/hooks": "^8.3.12",
+    "@mantine/notifications": "^8.3.12",
+    "@tabler/icons-react": "^3.36.1",
+    "@tanstack/react-query": "^5.90.19",
+    "@tmcw/togeojson": "^7.1.2",
     "antd-mobile": "^5.42.1",
     "antd-mobile-demo-data": "^0.3.0",
     "antd-mobile-icons": "^0.3.0",
     "axios": "^1.13.2",
     "classnames": "^2.5.1",
     "dayjs": "^1.11.19",
+    "leaflet": "^1.9.4",
     "less": "^4.4.2",
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
-    "react-router-dom": "^7.10.1"
+    "react-router-dom": "^7.10.1",
+    "recharts": "^3.6.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.39.1",
+    "@types/leaflet": "^1.9.21",
     "@types/node": "^24.10.1",
     "@types/react": "^19.2.5",
     "@types/react-dom": "^19.2.3",
