--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@mantine/core": "^8.3.12",
+    "@mantine/dates": "^8.3.12",
     "@mantine/hooks": "^8.3.12",
     "@mantine/notifications": "^8.3.12",
     "@tabler/icons-react": "^3.36.1",
